--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-cssmin": "^0.2.0",
     "gulp-less": "^3.4.0",
     "gulp-plumber": "^1.2.0",
-    "gulp-sourcemaps": "^1.12.1"
+    "gulp-sourcemaps": "^1.12.1",
+    "npm": "^5.7.1"
   }
 }
