--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
-Header set Cache-Control "max-age=2628000, public"
+Header set Cache-Control "max-age=1, public"
 
 # 10 Days = 60s x 60m x 24hrs x 10days =  864,000
 <filesMatch "\.(webm|ogg|mp4)$">
