--- a/web.config
+++ b/web.config
@@ -5,6 +5,14 @@
         <remove fileExtension=".woff2" />
         <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
         <mimeMap fileExtension=".woff2" mimeType="font/woff2" />
+        <remove fileExtension=".svg">
+        <mimeMap fileExtension=".svg" mimeType="image/svg+xml">
+        <remove fileExtension=".ttf">
+        <mimeMap fileExtension=".ttf" mimeType="application/x-font-ttf">
+        <remove fileExtension=".otf">
+        <mimeMap fileExtension=".otf" mimeType="application/x-font-opentype">
+        <remove fileExtension=".eot">
+        <mimeMap fileExtension=".eot" mimeType="application/vnd.ms-fontobject">
       </staticContent>
    </system.webServer>
 </configuration>
